# elements

./: .merlin  LICENSE  Makefile  README.md  _oasis  opam  proto.opam  utop.ml
bench/: bench_iter.ml  bench_list.ml
benchmarks/: .merlin  Array_early_termination.ml  Array_map.ml  Find_index.ml  Foldable_base.ml  Iterable_array.ml  Iterable_array_slow.ml  List_early_termination.ml  List_filter.ml  List_map.ml  jbuild
doc/: dev.odocl
examples/: Collectable.ml  Files.ml  Safe_resources.ml  ex_vec.ml  jbuild
experiments/: data_iter.ml  data_iter_exp1.ml  data_list.ml  data_list_old.ml  data_range.ml  iter1.ml  iterators.ml  rwo_functors.ml
opam-dir/: opam
pkg/: META  pkg.ml
playground/: .merlin  Codensity.ml  Experimental.ml  FCM.ml  File.ml  Fold_list.ml  Guide.fold  Implicits.ml  Implicits_mono.ml  Implicits_no.ml  Implicits_virtual.ml  Iter_and_into.ml  Obj_iterable.ml  Pipes.ml  Polymorphic_functors.ml  Safe_resources.ml  Show.ml  Transducers.ml  Transducers_2.ml  Unfoldable.ml
proto/: .merlin  Array.ml  Array.mli  Collection.ml  Control.ml  Control.mli  Either.ml  Experimental.ml  Fold.ml  Iter.ml  Kernel.ml  List.ml  List.mli  Local.ml  Option.ml  Option.mli  Proto.ml  Proto.mli  Ref.mli  Result.ml  Result.mli  Set.ml  Set.mli  Stream.ml  String.ml  String.mli  System.ml  Tuple.ml  Tuple.mli  jbuild
src/: .merlin  Array.ml  Control.mli  Dict.ml  Kernel.ml  List.ml  Option.ml  Proto.ml  Proto.mli  Result.ml  Result.mli  Stream.ml  String.ml  System.ml  _Proto.mli  el_array.ml  el_base.ml  el_either.ml  el_exn.ml  el_float.ml  el_int.ml  el_list.ml  el_map.ml  (+11 more)
(+95 files in other folders)
