opam-version: "1.2"
maintainer: "Rizo Isrof <rizo@odis.io>"
authors: ["Rizo Isrof <rizo@odis.io>"]
homepage: "https://github.com/rizo/proto"
doc: "http://rizo.odis.io/proto/doc"
license: "ISC"
dev-repo: "https://github.com/rizo/proto.git"
bug-reports: "https://github.com/rizo/proto/issues"
tags: []
available: [ ocaml-version >= "4.01.0"]
depends:
[
  "ocamlfind" {build}
  "ocamlbuild" {build}
  "topkg" {build & >= "0.9.0"}
  "shadow-stdlib"
]
depopts: []
build: [["make" "build"]]
