opam-version: "1.2"
maintainer: "Rizo Isrof <rizo@odis.io>"
authors: ["Rizo Isrof <rizo@odis.io>"]
homepage: "https://github.com/rizo/proto"
doc: "http://rizo.odis.io/proto/doc"
dev-repo: "https://github.com/rizo/proto.git"
bug-reports: "https://github.com/rizo/proto/issues"
tags: ["standard" "functional" "org:rizo" ]
license: "ISC"
available: [ ocaml-version >= "4.01.0"]
depends:
[
  "jbuilder" {build}
]
depopts: []
build: ["make" "build"]
